--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <div class="main-page">
 
                 <div class="left">
-                    <h3>Your Creativity my responsibility</h3>
-                    <h1>Grow Your Business with us. And join our happy family</h1>
-                    <p>Life is not easy, but hard work can make it easy.</p>
-                    <button>Contact</button>
+                    <h3 class="main-top-text" >Your Creativity my responsibility</h3>
+                    <h1 class="titel">Grow Your <span style="color: green;">Business</span> with. <br> And <br>join our <span style="color: aqua;">happy</span> family</h1>
+                    <p class="pareg">Life is not easy, but hard work can make it easy.</p>
+                    <button class="contact">Contact</button>
                 </div>
                 <div class="right">
                     <img class="main-img" src="./images/section.png" alt="">
