--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h3 class="nav-child">Home</h3>
                 <h3 class="nav-child">My Service</h3>
                 <h3 class="nav-child">Hire Now</h3>
-                <button class="nav-child ">Download CV</button>
+                <button class="nav-child cv">Download CV</button>
             </div>
         </div>
 
@@ -37,6 +37,14 @@
                     <img class="main-img" src="./images/section.png" alt="">
                 </div>
             </div>
+        </section>
+
+
+
+        <section>
+
+
+            
         </section>
         
 
